--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -29,11 +29,5 @@
 
   "tutoImportation": "Copiez le texte, allez dans 'Collection' et cliquez sur le bouton 'Importer' (presse-papier).",
 
-  "modified": "modifié",
-
-  "general": "Généraux",
-  "displaying": "Affichage",
-  "community": "Communauté",
-  "developer": "Développeur",
-  "maintenance": "Maintenance"
+  "modified": "modifié"
 }
