--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -18,7 +18,7 @@
   "updateAvailableText": "Do you want to update the app?",
   "resetSettingsText": "Do you really want to reset settings?",
   "deleteAllBuildsInMemoryText": "Do you really want to delete all saved builds?",
-  "appliedForBuildFinderAndComparator": "Applied when the app starts, for the Finder and the Comparator",
+  "appliedForBuildFinderAndComparator": "Applied when the app starts for the Finder and the Comparator",
   "doYouWantToOpenTheBrowser": "Do you want to open the browser?",
 
   "welcomeText": "This tool helps you find the best build based on your playstyle. If you need help, long-press an element to view its description, or use the help button at the top of the screen.",
