upgrade WelcomeModal content

--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -31,5 +31,5 @@
   "collection": "Ouvrir la Collection",
   "import": "Importer un build",
 
-  "longPress": "Appuyez longuement"
+  "button": "Bouton"
 }
