--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -21,7 +21,7 @@
   "appliedForBuildFinderAndComparator": "Appliquées au démarrage de l'app pour le Chercheur et le Comparateur",
   "doYouWantToOpenTheBrowser": "Voulez-vous ouvrir le navigateur ?",
 
-  "welcomeText": "Cet outil vous aide à trouver le meilleur build selon votre style de jeu. En cas de doute, effectuez un appui long sur un élément pour afficher sa description, ou utilisez le bouton d’aide au haut de l'écran.",
+  "welcomeText": "Cet outil vous aide à trouver le meilleur build selon votre style de jeu. En cas de doute, effectuez un appui long sur un élément (bouton, image, abréviation) pour afficher sa description, ou utilisez le bouton d’aide au haut de l'écran.",
 
   "buildFound": "Build trouvé",
 
@@ -29,5 +29,7 @@
 
   "tutoImportation": "Copiez le texte, allez dans 'Collection' et cliquez sur le bouton 'Importer' (presse-papier).",
 
-  "modified": "modifié"
+  "modified": "modifié",
+
+  "longPress": "Appuyez longuement"
 }
