check which game when import build

--- a/translations/locales/en/error.json
+++ b/translations/locales/en/error.json
@@ -7,6 +7,8 @@
   "buildLimitReachedInThisScreen": "build limit reached",
   "nameAlreadyExists": "this name is already taken:",
   "buildAlreadyExists": "this build is already",
+  "wrongGameBuildImported": "this build was created for",
+  "pleaseSwitchGame": "so please switch to this game in the settings to use it",
 
   "buildNameRequiredForSharing": "you must enter a name to share a build",
   "buildNameRequiredForSaving": "you must enter a name to record a build",
